<resources>

   <!-- 设置界面-->
    <string name="save_net_mode">省流模式</string>
    <string name="user_name">user_name</string>

<!--权限提示信息-->
    <string name="permission_camera_user_hint">test onRequestPermissionsResult: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>
    <string name="permission_camera_user_hint1">test shouldShowRequestPermissionRationale: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>


    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

    <string name="app_name">即刻知阅</string>
    <string name="tab_1">菜单</string>
    <string name="tab_2">菜单</string>
    <string name="tab_3">菜单</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录或是注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码有误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="share">分享</string>
    <string name="share_from">来自「知乎日报」的分享：</string>
    <string name="load_fail">加载失败</string>
    <string name="no_news">没有数据</string>
    <string name="refresh">再次刷新</string>
    <string name="load_more_fail">加载更多失败</string>
    <string name="atricle_url">文章详情页url</string>
    <string name="image_url">详情页图片Url</string>
    <string name="share_from_guokr">来自果壳精选的分享</string>
    <string name="image_from">图片来源</string>
    <string name="douban_url">豆瓣文章详情页URL</string>
    <string name="author">作者</string>
    <string name="content">内容</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="set_user_name">用户名</string>
    <string name="permission_camera_rationale">拒绝该权限将无法使用相机</string>
    <string name="permission_camera_denied">权限不足，无法使用相机</string>
    <string name="permission_camera_never_askagain">哈哈哈</string>
    <string name="h_type">历史记录类型</string>
    <string name="h_id">历史记录ID</string>
    <string name="player">视频播放地址</string>
    <string name="closedrawer">关闭drawerview</string>
    <string name="opendrawer">打开drawer</string>
    <string name="login">登录</string>

  <!--登录和注册-->
    <string name="Username">昵称</string>
    <string name="Password">密码</string>
    <string name="go">登录</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="repeat_password">确认密码</string>
    <string name="next">注册</string>
    <string name="UseEmail">电话号码(作为登录账号)</string>

    <!--用户管理-->
    <string name="input">修改用户昵称</string>
    <string name="input_content">请输入新的昵称</string>
    <string name="input_hint" />
    <string name="input_prefill" />
    <string name="progress_dialog">修改中...</string>
    <string name="please_wait" />
    <string name="input_desc">修改自我简介</string>
    <string name="input_newName">修改昵称</string>
    <string name="input_content_name">请输入新的昵称</string>
    <string name="input_content_desc">请输入新的自我简介</string>
    <string name="UserAccount">账号(手机号码)</string>
    <string name="logout">登出</string>
    <string name="share_from_one">来自One的分享</string>
    <string name="videoPlayerUrl">视频播放地址</string>
    <string name="videoAbstract">视频摘要</string>
    <string name="videoTitle">视频标题</string>
    <string name="share_from_jikezhiyue">即刻知阅</string>
    <string name="double_click_exit">再按一次离开应用</string>
    <string name="clear_cache_successfully">清除缓存成功</string>
    <string name="video_setting">视频设置</string>
    <string name="video_auto_play_summary"><![CDATA[开启后在Wifi环境下自动播放视频]]></string>
    <string name="video_auto_play">自动播放视频</string>
    <string name="about_settings">关于</string>
    <string name="version">版本</string>
    <string name="changelog_url">更新记录</string>
    <string name="changelog">更新记录</string>
    <string name="about_libraries_summary">查看开源许可信息</string>
    <string name="about_libraries_label">开源许可</string>
    <string name="source_code_url">https://github.com/HelloEath/news</string>
    <string name="source_code">源代码</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>
    <string name="copyright">本程序仅供学习交流, 不可用于任何商业用途.</string>
    <string name="content_type">兴趣类型</string>
    <string name="share_from_app">来自即刻知阅</string>
    <string name="fist2_1">即刻体验</string>
 <string name="fist2_2">登录/注册</string>
    <string name="btn_nowGo">立即登录</string>
 <string name="rePassword">确认密码</string>
 <string name="newPwd">请输入新密码</string>
 <string name="repwd">重置密码</string>
    <string name="reNewPwd">确认新密码</string>
 <string name="phone">请输入手机号</string>
 <string name="vefiCode">请输入验证码</string>
 <string name="btn_confirm">确认修改</string>
 <string name="text_goBack">返回登录</string>
 <string name="text_gotoLogin">跳转到登录界面</string>
 <string name="text_veriCode">在此输入验证码</string>
 <string name="btn_text_veriCode">发送验证码</string>
    <string name="search_type">搜索类型</string>
    <string name="VideoId">视频Id</string>
    <string name="h_type2">内容类型</string>
    <string name="menu_search">搜索</string>
 <string name="nohistoryData">没有历史记录</string>
    <string name="one_img">one图片img</string>
    <string name="home_unlogin_username">我是谁</string>
    <string name="goMain">主页</string>
</resources>
