<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_bg"
    android:background="@color/side_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

  >

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
               <View
                    android:layout_alignParentStart="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#2fa881"
                    />
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="#2fa881"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="16sp"
                        android:hint="@string/UserAccount"
                        android:textColor="#2fa881"
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/login_bg_input_cursor"
                        android:paddingBottom="5dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="16sp"
                        android:hint="@string/Password"
                        android:textColor="#2fa881"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/login_bg_input_cursor"
                        android:paddingBottom="5dp"
                        android:layout_marginTop="5dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <Button
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape"
                    android:layout_width="100dp"
                    android:layout_marginLeft="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_height="50dp"

                    android:textSize="20sp"
                    android:text="@string/go"
                    android:textColor="#f9f9f9"
                    >
                </Button>
                <Button
                    android:id="@+id/bt_goMain"
                    android:background="@drawable/bt_shape"
                    android:layout_width="100dp"
                    android:layout_height="50dp"

                    android:layout_marginRight="30dp"
                    android:layout_alignParentRight="true"
                    android:textSize="20sp"
                    android:text="@string/goMain"
                    android:textColor="#f9f9f9"
                    >
                </Button>
            </RelativeLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/login_icon_register"

        android:transitionName="loginFab"
        android:layout_alignTop="@id/cv"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@id/cv"
        android:layout_marginEnd="-20dp"
        android:background="@color/side_1"
       />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/login_icon_forgetpwd"

        android:background="@color/side_1"
        android:transitionName="loginFab2"
        android:layout_alignTop="@id/cv"
        android:layout_marginTop="75dp"
        android:layout_alignEnd="@id/cv"
        android:layout_marginEnd="-20dp"

        />


</RelativeLayout>